--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -13,6 +13,16 @@ provider:
         - dynamodb:*
         - s3:*
       Resource: "*"
+  apiGateway:
+    apiKeys:
+      - MyCommerceApiKeys
+    usagePlan:
+      quota:
+        limit: 1000
+        period: MONTH
+      throttle:
+        rateLimit: 50
+        burstLimit: 100
 
 plugins:
   - serverless-webpack
@@ -23,12 +33,6 @@ package:
 custom:
   tableName: products
   thumbnailBucketName: mycommercethumbnailbucket
-  webpack:
-    webpackConfig: ./webpack.config.js
-    includeModules: true
-    packagerOptions:
-      scripts:
-        - npm install --arch=x64 --platform=linux --libc=glibc sharp
 
 functions:
   getProductsList:
@@ -38,6 +42,7 @@ functions:
           path: products
           method: GET
           cors: true
+          private: true
 
   addProduct:
     handler: lambdas/api-endpoints/addProduct.handler
@@ -46,6 +51,7 @@ functions:
           path: products
           method: POST
           cors: true
+          private: true
 
   deleteProduct:
     handler: lambdas/api-endpoints/deleteProduct.handler
@@ -54,10 +60,12 @@ functions:
           path: products/{id}
           method: DELETE
           cors: true
+          private: true
 
   generateThumbnail:
     handler: lambdas/utilities/generateThumbnail.handler
-    timeout: 15
+    timeout: 60
+    memorySize: 2048
     events:
       - stream:
           type: dynamodb
@@ -77,7 +85,7 @@ resources:
     Thumbnail:
       Type: AWS::S3::Bucket
       Properties:
-        BucketName: mycommercethumbnailbucket
+        BucketName: ${self:custom.thumbnailBucketName}
     Products:
       Type: AWS::DynamoDB::Table
       Properties:
